package org.study.patterns.behavioral.observer;

public interface Observer {
    void update();
}
